# arguin_stocal

./: README.md  main.py  pyproject.toml
src/: ch01.ipynb
src/.ipynb_checkpoints/: ch01-checkpoint.ipynb
src/numerical_projects/: ch01.ipynb
